--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="js/bootstrap//bootstrap.min.js"></script>
 <script src="js/buttons.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="js/jquery-3.3.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 
 <div class="container">
@@ -23,7 +23,7 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-12">
-								<form id="login-form" action="https://phpoll.com/login/process" method="post" role="form" style="display: block;">
+								<form id="login-form" action="login.php" method="post" role="form" style="display: block;">
 									<div class="form-group">
 										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
 									</div>
